--- a/src/styles/ticked.css
+++ b/src/styles/ticked.css
@@ -13,10 +13,12 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 900px;
+    height: 400px;
+    overflow: hidden;
 }
 
 form {
-    width: 100%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -30,15 +32,53 @@ form {
 }
 
 .ticked-content {
+    flex: 1;      /* fill leftover space vertically */
+    min-height: 0;/* important - this allows children to shrink & scroll */
     display: flex;
     height: 100%;
     align-items: stretch;
-    justify-content: center;
+    justify-content: flex-start ;
     width: 100%;
     font-weight: 400;
     font-family: "Roboto", serif;
+    flex-wrap: nowrap;
     background: var(--main-content);
 }
+
+.tasks-wrapper {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    min-height: 0;
+}
+
+.project-header {
+    font-size: 2rem;
+    width: 80%;
+    margin: 20px;
+    display: flex;
+    padding: 10px;
+    height: 60px;
+    border-radius: 20px;
+    gap: 20px;
+    justify-content: flex-start;
+    align-items: center;
+    box-shadow: 11px 9px 13px 0px rgba(0,0,0,0.17);
+}
+
+#editProjectBtn {
+    background: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 2rem;
+    transition: 300ms;
+}
+
+#editProjectBtn:hover {
+    transform: scale(1.15) rotate(45deg);
+}
+
 
 .modal-buttons {
     width: 100%;
@@ -81,18 +121,20 @@ form {
     border-radius: 20px;
 }
 
+
 .tasks-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-radius: 20px;
     margin: 20px;
     font-size: 1.5rem;
     font-weight: 600;
     text-align: center;
-    height: 75%;
+    border: 2px solid rgba(0, 0, 0, 0.35);
     overflow-y: auto;  
-    gap: 10px;
+    height: 75%;
+    gap: 20px;
+    padding: 20px;
 }
 
 .task-card {
@@ -116,48 +158,67 @@ form {
 }
 
 .side-nav {
-    width: 200px;
-    height: 100%;
+    flex: 0 0 200px;
     box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.25);
-    text-align: center;
+    text-align: left;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     padding: 20px;
     border-top: 8px solid rgba(0, 0, 0, 0.253);
     border-top-right-radius: 20px;
-    background: var(--bubbles-hover);
+    background: linear-gradient(104deg, rgba(46,106,208,1) 0%, rgba(25,76,161,1) 100%);
+    gap: 10px;
+}
+
+.side-nav button {
+    width: 100%;
+    padding: 10px 20px;
+    background: none;
+    outline: none;
+    border-radius: 20px;
+    cursor: pointer;
+    border: none;
+    font-size: 1.5rem;
+    color: white;
+}
+
+.side-nav button:hover {
+    background: rgba(0, 0, 0, 0.35);
 }
 
 .tasks-view {
-    flex-grow: 1;
     display: flex;
-    margin: 20px;
-    gap: 40px;
-    width: 100%;
+    gap: 20px;
+    flex: 1;
     justify-content: center;
-    align-items: center;
-    height: 100%;
+    align-items: stretch;
+    min-height: 0;
+}
+
+.tasks-list,
+.task-detail {
+  flex: 1;
+  height: 100%;
+  min-height: 0;
+  margin: 20px;
+  max-height: 508px;
 }
 
 .tasks-list {
-    width: 40%;
     box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.45);
     border-radius: 20px;
     padding: 20px;
-    height: 100%;
     background: var(--main-content);
     color: var(--task-bubbles);
     gap: 10px;
     border: 2px solid var(--light-border);
 }
 .task-detail {
-    width: 40%;
     padding: 20px;
     border-radius: 20px;
     box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.45);
-    height: 100%;
     background: var(--main-content);
     display: flex;
     flex-direction: column;
@@ -166,11 +227,6 @@ form {
     font-size: 1.5rem;
     color: var(--task-bubbles);
     border: 2px solid var(--light-border);
-}
-
-.tasks-list .list-content {
-    flex-grow: 1;
-    overflow-y: auto;
 }
 
 .addTaskBtnWrap {
@@ -191,29 +247,17 @@ form {
     background: none;
     margin-top: auto;
     outline: none;
-    border: none;
+    border: 2px solid black;
   }
   
 
 .addTaskBtn:hover {
     background: var(--bubbles-hover);
+    border: 2px solid var(--bubbles-hover);
     color: white;
-    box-shadow: 0px 9px 10px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 9px 10px 0px rgba(0,0,0,0.35);
 
 }
-
-
-.page-wrapper {
-    flex: 1 1 auto;  /* fills the remaining space */
-    display: flex;
-    flex-direction: column;
-  }
-
-  .content {
-    flex: 1;
-    overflow: hidden; /* prevents accidental overflow if children are too big */
-  }
-
 
 .add-todo-button, .cancelbtn {
     padding: 10px 20px;
@@ -235,3 +279,11 @@ form {
     flex-grow: 1;
     text-align: center;
   }
+
+  .section-wrap {
+    width: 100%;
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+
